[package]
name = "asicam_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cameraunit = "1.0.1"
cameraunit_asi = { git = "https://github.com/sunipkm/cameraunit_asi" }
chrono = "0.4.30"
ctrlc = "3.4.1"
fitsio = "0.21.2"
ini = "1.3.0"
