[package]
name = "testprog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cameraunit = { path = "../cameraunit" }
cameraunit_asi = { path = "../cameraunit_asi" }
chrono = "0.4.30"
imagedata = { path = "../imagedata" }
ini = "1.3.0"
